[tool.poetry]
name = "tinvest"
version = "1.0.22"
description = "Tinkoff Invest"
authors = ["Danil Akhtarov <daxartio@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/daxartio/tinvest"
homepage = "https://pypi.org/project/tinvest"
keywords = []

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
aiohttp = ">=3.6,<4.0"
pydantic = ">=1.2,<2"
requests = ">=2.22,<3.0"
Deprecated = "^1.2.9"

[tool.poetry.dev-dependencies]
asynctest = "^0.13"
autoflake = "^1.3.1"
black = {version = "^19.10b0", allow-prereleases = true}
flake8-awesome = "^1.2"
mkdocs = "^1.1"
mkdocs-material = "^5.1.3"
mkdocstrings = "^0.11.0"
mypy = "^0.750.0"
pylint = "^2.5"
pytest = "^5.3"
pytest-asyncio = "^0.11"
pytest-cov = "^2.6"
pytest-deadfixtures = "^2.1"
pytest-mock = "^3.1"
unify = "^0.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"