[tool.poetry]
name = "tinvest"
version = "1.0.23"
description = "Tinkoff Invest"
authors = ["Danil Akhtarov <daxartio@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/daxartio/tinvest"
homepage = "https://pypi.org/project/tinvest"
keywords = []

[tool.poetry.scripts]
tinvest = 'tinvest.__main__'

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
aiohttp = ">=3.6,<4.0"
pydantic = ">=1.2,<2"
requests = ">=2.22,<3.0"
Deprecated = "^1.2.9"

[tool.poetry.dev-dependencies]
asynctest = "*"
autoflake = "*"
black = {version = "*", allow-prereleases = true}
flake8 = "*"
flake8-annotations-complexity = "*"
flake8-bandit = "*"
flake8-breakpoint = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-eradicate = "*"
flake8-if-expr = "*"
flake8-isort = "*"
flake8-logging-format = "*"
flake8-print = "*"
flake8-pytest = "*"
flake8-pytest-style = "*"
flake8-requirements = "*"
flake8-return = "*"
mkdocs = "*"
mkdocs-material = "*"
mkdocstrings = "*"
mypy = "*"
pep8-naming = "*"
pylint = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-deadfixtures = "*"
pytest-mock = "*"
toml = "*"
unify = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"